rgw: op: check for bucket existance as well in init_quota

While initializing quota, we already check for object existance, and proceed
expecting bucket to be initialized. For non S3/Swift api requests, for eg. the
admin api `s->bucket` wouldn't be initialized, so check for the bucket existance
as well before proceeding to verify bucket owner's quota.

Fixes: https://tracker.ceph.com/issues/47882
Signed-off-by: Abhishek Lekshmanan <abhishek@suse.com>